2009-08-31  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-29-00
	* fixes by Ulf to the conversion of empty global psets
	* fixes by Jonathan to the parser (new problems file, updates to
	scripts extracting hlt cfi files, etc.)
	* first release of new message logger dialog by Vasu
	* improvements to the subtable creation tool
	(test/runCreateConfig)

2009-07-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-28-03
	* improvement to db interaction stabilization by Ulf, to be
	deployed with next version of RCMS.
	
2009-06-23  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-28-02
	* add test/runConfDBAdmin
	* completed & tested implementation of removal of releases and
	associated configurations
	* changed db schema: *Templates tables have their FK constraints
	to SuperIds altered to contain 'cascade on delete'

2009-06-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-28-01
	* gui: order instances in copy/reference context menus
	alphapbetically
	* gui: allow to search for values in the Search&Replace dialog,
	via the syntax: 'name (type) = value'. Each information is
	optional!

2009-06-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-28-00
	* converter: fixes for online (revert Bryan's changes)

2009-05-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-27-01
	* diff: fill 'Old Configuration' pull-down menu with current
	configuration and all its past versions
	* bugfix to ParameterComparison.toString()

2009-05-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-27-00
	* gui: display configuration snippet in python
	* gui: omit warning message when closing unchanged configurations
	containing streams/datasets
	* gui: improve default for 'Old Configuration' in diff dialog
	* gui: allow admins to unlock all configurations
	* cnv: include output-modules in --cff mode
	* db: speed up ConfDB.loadConfigurationTree()